<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_ornament_main"
        android:layout_width="408dp"
        android:layout_height="363dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/gambar_ungu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/intro_logo"
        android:layout_width="112dp"
        android:layout_height="106dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logobmii"
        app:layout_constraintBottom_toTopOf="@+id/intro_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/intro_message"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/intro_logo"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/start_button"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_start"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/intro_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>